# knee-rehab-app

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  temp.txt
android/: AndroidManifest.xml
src/: BluetoothDevice.cpp  BluetoothDevice.h  BluetoothManager.h  BluetoothSocketManager.cpp  BluetoothSocketManager.h  InternetSocketManager.cpp  InternetSocketManager.h  Parser.cpp  Parser.h  Utilities.cpp  Utilities.h  bluetoothmanager.cpp  main.cpp
ui/qml/: DebugPage.qml  HomePage.qml  Main.qml
